==> Paciente8159/uCNC/uCNC/src/hal/mcus/lpc176x/mcu_lpc176x.c <==
#include "../../../cnc.h"
#include "system_LPC17xx.h"
#include <tusb_ucnc.h>
#define SERVO_MIN 64

void mcu_init(void)
{
	mcu_clocks_init();
	mcu_io_init();
	mcu_usart_init();
	// SysTick is started by the framework but is not working
	// Using timer
	mcu_rtc_init();
#if SERVOS_MASK > 0
	servo_timer_init();
#endif
	GPDMA_Init();

	mcu_disable_probe_isr();
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;

	LPC_SC->PCONP |= ITP_PCONP;
	LPC_SC->ITP_PCLKSEL_REG &= ~ITP_PCLKSEL_MASK; // system clk/4

	ITP_TIMER_REG->CTCR = 0;
	ITP_TIMER_REG->CCR &= ~0x03;
	ITP_TIMER_REG->TC = 0;
	ITP_TIMER_REG->PC = 0;
	ITP_TIMER_REG->PR = 0;
	ITP_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ITP_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ITP_TIMER_REG->EMR = 0;

	ITP_TIMER_REG->PR = 0; // for higher resolution use PR = 0 that means that the timer will tick at (F_CPU/4)
	ITP_TIMER_REG->IR = 0xFFFFFFFF;

	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->MCR = 0x03; // Interrupt on MC0 and MC1 and reset on MC0

	NVIC_SetPriority(ITP_TIMER_IRQ, 1);
	NVIC_ClearPendingIRQ(ITP_TIMER_IRQ);
	NVIC_EnableIRQ(ITP_TIMER_IRQ);

	// TIM_Cmd(ITP_TIMER_REG, ENABLE);
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_stop_itp_isr(void)
{
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	NVIC_DisableIRQ(ITP_TIMER_IRQ);
}

uint8_t mcu_eeprom_getc(uint16_t address)
{
	DBGMSG("EEPROM invalid address @ %u", address);
	return 0;
}

void mcu_eeprom_putc(uint16_t address, uint8_t value)
{
	DBGMSG("EEPROM invalid address @ %u", address);
}

void mcu_spi_config(spi_config_t config, uint32_t frequency)
{
	uint8_t div = SPI_COUNTER_DIV(frequency);
	div += (div & 0x01) ? 1 : 0;
	SPI_REG->CR1 &= ~(1 << 1);		  // disable SSP
	SPI_REG->CPSR = div;			  // internal divider
	SPI_REG->CR0 |= config.mode << 6; // clock phase
	SPI_REG->CR1 |= 1 << 1;			  // enable SSP
	// SSP_DeInit(SPI_REG);

	// SSP_CFG_Type ssp_cfg = {
	// 		.ClockRate = frequency,
	// 		.Databit = SSP_DATABIT_8,
	// 		.FrameFormat = SSP_FRAME_SPI,
	// 		.Mode = SSP_MASTER_MODE,
	// 		.CPHA = (config.mode & 0x01),
	// 		.CPOL = ((config.mode >> 1) & 0x01),
	// };

	// SSP_Init(SPI_REG, &ssp_cfg);

	spi_dma_enabled = config.enable_dma;
}

uint8_t mcu_spi_xmit(uint8_t c)
{
	SPI_REG->DR = c;
	while (!(SPI_REG->SR & SSP_SR_RNE))
		;
	return SPI_REG->DR;
}

static uint8_t mcu_i2c_write(uint8_t data, bool send_start, bool send_stop, uint32_t ms_timeout)
{
	bool stop __attribute__((__cleanup__(mcu_i2c_write_stop))) = send_stop;
	int32_t timeout = ms_timeout;

	if (send_start)
	{
		// manual 19.9.7.3
		if (!I2C_REG->I2STAT || (I2C_REG->I2CONSET & I2C_I2CONSET_STA) || (I2C_REG->I2CONSET & I2C_I2CONSET_STO))
		{
			I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
			I2C_REG->I2CONSET = I2C_I2CONSET_STO;
			// Wait for complete
			__TIMEOUT_MS__(timeout)
			{
				if (I2C_REG->I2CONSET & I2C_I2CONSET_STO)
				{
					break;
				}
			}
		}
		// Enter to Master Transmitter mode
		I2C_REG->I2CONSET = I2C_I2CONSET_STA;
		// Wait for complete
		timeout = ms_timeout;
		__TIMEOUT_MS__(timeout)
		{
			if (I2C_REG->I2CONSET & I2C_I2CONSET_SI)
			{
				break;
			}
		}
		__TIMEOUT_ASSERT__(timeout)
		{
			stop = true;
			return I2C_NOTOK;
		}
		I2C_REG->I2CONCLR = I2C_I2CONCLR_STAC;
		if ((I2C_REG->I2STAT & I2C_STAT_CODE_BITMASK) != 0x08)
		{
			I2C_REG->I2CONSET = I2C_I2CONSET_STO;
			I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;
			// Wait for complete
			timeout = ms_timeout;
			__TIMEOUT_MS__(timeout)
			{
				if (I2C_REG->I2CONSET & I2C_I2CONSET_STO)
				{
					break;
				}
			}
			__TIMEOUT_ASSERT__(timeout)
			{
				stop = true;
				return I2C_NOTOK;
			}
		}
	}

	// Reset STA, STO, SI
	I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC | I2C_I2CONCLR_STOC | I2C_I2CONCLR_STAC;

	/* Make sure start bit is not active */
	I2C_REG->I2DAT = data & I2C_I2DAT_BITMASK;
	// Wait for complete
	timeout = ms_timeout;
	__TIMEOUT_MS__(timeout)
	{
		if (I2C_REG->I2CONSET & I2C_I2CONSET_SI)
		{
			break;
		}
	}

	__TIMEOUT_ASSERT__(timeout)
	{
		stop = true;
		return I2C_NOTOK;
	}

	switch ((I2C_REG->I2STAT & I2C_STAT_CODE_BITMASK))
	{
	case 0x18:
	case 0x28:
	case 0x40:
	case 0x50:
		break;
	default:
		stop = true;
		return I2C_NOTOK;
	}

	return I2C_OK;
}

static uint8_t mcu_i2c_read(uint8_t *data, bool with_ack, bool send_stop, uint32_t ms_timeout)
{
	*data = 0xFF;
	bool stop __attribute__((__cleanup__(mcu_i2c_write_stop))) = send_stop;

	if (with_ack)
	{
		I2C_REG->I2CONSET = I2C_I2CONSET_AA;
	}
	else
	{
		I2C_REG->I2CONCLR = I2C_I2CONCLR_AAC;
	}

	I2C_REG->I2CONCLR = I2C_I2CONCLR_SIC;

	// Wait for complete
	__TIMEOUT_MS__(ms_timeout)
	{
		if (I2C_REG->I2CONSET & I2C_I2CONSET_SI)
		{
			*data = (uint8_t)(I2C_REG->I2DAT & I2C_I2DAT_BITMASK);
			return I2C_OK;
		}
	}

	stop = true;
	return I2C_NOTOK;
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	mcu_timeout_cb = fp;
	LPC_SC->PCONP |= ONESHOT_PCONP;
	LPC_SC->ONESHOT_PCLKSEL_REG &= ~ONESHOT_PCLKSEL_MASK; // system clk/4

	ONESHOT_TIMER_REG->CTCR = 0;
	ONESHOT_TIMER_REG->CCR &= ~0x03;
	ONESHOT_TIMER_REG->TC = 0;
	ONESHOT_TIMER_REG->PC = 0;
	ONESHOT_TIMER_REG->PR = 0;
	ONESHOT_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ONESHOT_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ONESHOT_TIMER_REG->EMR = 0;

	ONESHOT_TIMER_REG->PR = ((F_CPU >> 2) / 1000000UL) - 1; // for 1us
	ONESHOT_TIMER_REG->IR = 0xFFFFFFFF;

	ONESHOT_TIMER_REG->MR0 = timeout;
	ONESHOT_TIMER_REG->MCR = 0x07; // Interrupt reset and stop on MC0

	NVIC_SetPriority(ONESHOT_TIMER_IRQ, 3);
	NVIC_ClearPendingIRQ(ONESHOT_TIMER_IRQ);
	NVIC_EnableIRQ(ONESHOT_TIMER_IRQ);

	// TIM_Cmd(ONESHOT_TIMER_REG, ENABLE);
	// ONESHOT_TIMER_REG->TCR |= TIM_ENABLE;
}
